--- a/assignment_1/CMakeLists.txt
+++ b/assignment_1/CMakeLists.txt
@@ -6,7 +6,7 @@ project(fp VERSION 1.0 LANGUAGES CXX)
 
 include (cmake/benchmark.cmake)
 
-set(CMAKE_CXX_COMPILER "clang++")
+set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -pthread")
 # set(FM_3RD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rd-party)
 
