--- a/assignment_2/CMakeLists.txt
+++ b/assignment_2/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required (VERSION 3.12)
 
 # Project name
-project(fp VERSION 1.0 LANGUAGES CXX)
+project(guided VERSION 1.0 LANGUAGES CXX)
 
 include (cmake/benchmark.cmake)
 
